--- a/upload/upload.html
+++ b/upload/upload.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Test Upload</h1>
 
-    <form action="/validation/api/" method="post" enctype="multipart/form-data">
+    <form action="/validation/api/secure/test" method="post" enctype="multipart/form-data">
         <input type="file" name="filename">
         <input type="submit" value="upload">
     </form>
