--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <title>Search Form</title>
 </head>
 <body>
-    <div class="container" id="container">
+     <div class="container" id="container">
         <div class="row">
-                <div class="col-sm">
-                                               
-                    <div class="form-group">
+                <div class="col-sm"> 
+                                        <h2>Сервис на доработке, извините за временные неудобства :(</h2>           
+                   <!-- <div class="form-group">
                         <label for="search-field">Please Enter Valid Organization Code</label>
                         <input class="form-control" value="" type="text" id="search-field" size="25" minlength="8" maxlength="8" required placeholder="Введите код организации">                                  
                                   <div class="checkboxThree">
@@ -26,7 +26,8 @@
                     </div>
                     <div class="nciblock">
 
-                    </div>                        
+                    </div>               -->          
+                    
 </div>
 </div>
 </div>
