refactoring index, saving documents without replace(bad perfomance), filtering search

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
      <div class="container" id="container">
         <div class="row">
                 <div class="col-sm"> 
-                                        <h2>Сервис на доработке, извините за временные неудобства :(</h2>           
-                   <!-- <div class="form-group">
+                                                 
+                    <div class="form-group">
                         <label for="search-field">Please Enter Valid Organization Code</label>
                         <input class="form-control" value="" type="text" id="search-field" size="25" minlength="8" maxlength="8" required placeholder="Введите код организации">                                  
                                   <div class="checkboxThree">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="nciblock">
 
-                    </div>               -->          
+                    </div>              
                     
 </div>
 </div>
