--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                 <div class="col-sm"> 
                                                  
                     <div class="form-group">
-                        <label for="search-field">Please Enter Valid Organization Code</label>
+                        <label for="search-field"><p class= "mb-0 " >Please Enter Valid Organization Code</p> </label>
                         <input class="form-control" value="" type="text" id="search-field" size="25" minlength="8" maxlength="8" required placeholder="Введите код организации">                                  
                                   <div class="checkboxThree">
                                       <button class="btn btn-secondary btn-md" id="search-orgcode">Search</button>   
